@@ -1,0 +1,2 @@
+{"http_user_agent": "ELB-HealthChecker/1.0", "status": 200}
+{"http_user_agent": "ELB-HealthChecker/1.0", "status": 404}
